--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,14 +33,25 @@ form fieldset .legajo label {
   padding: 0 0 0 10px;
 }
 
-form input {
+form input, form textarea {
   margin: 0 0 15px 15px;
+}
+
+form textarea {
+  -ms-grid-column: 1;
+      grid-column-start: 1;
+  grid-column-end: 3;
+  margin: 15px;
+}
+
+#element-to-print {
+  max-width: 180mm;
 }
 
 .inscripcion {
   max-height: 297mm;
   width: 180mm;
-  padding: 10mm;
+  padding: 10mm 10mm 5mm 10mm;
 }
 
 .inscripcion h1 {
