Cambios: :coffee: pasar index.html a formulario :coffee: cambiar index.css a form.css :smiley: agregar index.html :smiley: agregar style.css

--- a/public/css/form.css
+++ b/public/css/form.css
@@ -143,4 +143,4 @@ form textarea {
 .inscripcion .datos p {
   text-align: center;
 }
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=form.css.map */
