--- a/src/scss/pages/inicio.scss
+++ b/src/scss/pages/inicio.scss
@@ -1,7 +1,7 @@
-@use "../styleparts/univreset";
-@use "../styleparts/header";
-@use "../styleparts/nav";
-@use "../styleparts/footer";
+@use "../layout/univreset";
+@use "../layout/header";
+@use "../layout/nav";
+@use "../layout/footer";
 @use "../abstracts/" as *;
 
 
@@ -10,7 +10,7 @@ main{
     grid-template-columns: 2fr 1fr;
 }
 
-.noticias{
+#noticias{
     display: flex;
     flex-direction: column;
     h1{
