--- a/public/css/pages/afiliacion.css
+++ b/public/css/pages/afiliacion.css
@@ -88,58 +88,105 @@
   place-self: center start;
 }
 
-main {
-  display: grid;
-  grid-template-columns: 2fr 1fr;
-}
-
-#noticias {
+form {
   display: flex;
   flex-direction: column;
+  max-width: 30%;
 }
-#noticias h1 {
-  font-family: "Poppins", sans-serif;
-  color: #426DB4;
-  margin: 1rem;
-}
-#noticias article {
-  max-width: 100%;
-  max-height: 10rem;
+form fieldset {
   display: grid;
-  grid-template-columns: 1fr 2fr;
-  border-radius: 0.25rem;
-  box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.1);
-  margin: 1rem;
+  grid-template-columns: 1fr 1fr;
   padding: 1rem;
+  margin: 0.5rem;
 }
-#noticias article img {
-  max-height: 10rem;
-  grid-row-start: 1;
-  grid-row-end: 3;
+form fieldset .legajo {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  border: none;
+  transform: translatex(-4mm);
 }
-#noticias article h2 {
-  font-family: "Rozha One", serif;
+form fieldset .legajo label {
+  padding: 0 0 0 10px;
 }
-#noticias article p {
-  font-family: "Libre Baskerville", serif;
+form input, form textarea {
+  margin: 0 0 15px 15px;
+}
+form textarea {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  margin: 15px;
 }
 
-aside {
+#element-to-print {
+  max-width: 210mm;
+}
+
+.inscripcion {
+  max-height: 297mm;
+  width: 180mm;
+  padding: 10mm 10mm 5mm 10mm;
+}
+.inscripcion h1 {
+  font-family: "Arial Narrow", Arial, sans-serif;
+  font-size: 12pt;
+  font-weight: bold;
+  text-align: center;
+  margin: 10mm;
+  text-decoration: underline;
+}
+.inscripcion h2 {
+  font-family: "Arial Narrow", Arial, sans-serif;
+  font-size: 10pt;
+  font-weight: bold;
+  text-align: end;
+}
+.inscripcion h3 {
+  font-family: "Arial Narrow", Arial, sans-serif;
+  font-size: 10pt;
+  font-weight: bold;
+}
+.inscripcion h4 {
+  font-family: "Arial Narrow", Arial, sans-serif;
+  font-size: 10pt;
+  font-weight: bold;
+}
+.inscripcion p {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 9pt;
+}
+.inscripcion .data {
+  margin-top: 15mm;
+}
+.inscripcion .firma {
+  margin: 20mm 30mm 0 0;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+.inscripcion .firma div {
+  display: grid;
+  place-items: center;
+  margin-bottom: 10mm;
+  align-self: end;
+}
+.inscripcion .firma div p {
+  margin: 0;
+}
+.inscripcion hr {
+  border-top: 2px dashed;
+}
+.inscripcion .datos {
   display: flex;
   flex-direction: column;
   align-items: center;
+  max-width: 400px;
 }
-aside iframe {
-  max-width: 100%;
-  border-radius: 1rem;
-  box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.1);
-  margin: 1rem;
-  place-self: center;
+.inscripcion .datos img {
+  max-width: 200px;
 }
-aside a img {
-  width: 340px;
-  border-radius: 1rem;
-  box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.1);
+.inscripcion .datos p {
+  text-align: center;
 }
 
-/*# sourceMappingURL=inicio.css.map */
+/*# sourceMappingURL=afiliacion.css.map */
