--- a/public/css/pages/afiliacion.css
+++ b/public/css/pages/afiliacion.css
@@ -22,6 +22,7 @@
   background-color: #0F4D90;
   position: fixed;
   box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.1);
+  z-index: 100;
 }
 #nav-g a {
   text-decoration: none;
