--- a/public/css/pages/nosotros.css
+++ b/public/css/pages/nosotros.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Rozha+One&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&display=swap");
@@ -91,38 +92,59 @@
 
 main {
   display: grid;
-  grid-template-columns: 2fr 1fr;
+  grid-template-columns: 2.5fr 1fr;
 }
 
-#noticias {
-  display: flex;
-  flex-direction: column;
-}
-#noticias h1 {
-  font-family: "Poppins", sans-serif;
-  color: #426DB4;
-  margin: 1rem;
-}
-#noticias article {
-  max-width: 100%;
-  max-height: 10rem;
-  display: grid;
-  grid-template-columns: 1fr 2fr;
-  border-radius: 0.25rem;
-  box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.1);
-  margin: 1rem;
+.accordion__button {
+  display: block;
+  width: calc(100% - 2rem);
   padding: 1rem;
-}
-#noticias article img {
-  max-height: 10rem;
-  grid-row-start: 1;
-  grid-row-end: 3;
-}
-#noticias article h2 {
+  margin: 1rem 1rem 0 1rem;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  background: #698FDA;
+  color: #ffffff;
+  text-align: left;
+  transition: background 0.2;
+  font-size: 2rem;
   font-family: "Rozha One", serif;
+  border-radius: 1rem;
+  box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.1);
 }
-#noticias article p {
-  font-family: "Libre Baskerville", serif;
+
+.accordion__button::after {
+  content: "▾";
+  float: right;
+  transform: scale(1.5);
+}
+
+.accordion__button--active {
+  background: #90B3FF;
+  border-radius: 1rem 1rem 0 0;
+}
+
+.accordion__button--active::after {
+  content: "▴";
+}
+
+.accordion__content {
+  width: inherit;
+  padding: 15px;
+  margin: 0 1rem 1rem 1rem;
+  overflow: hidden;
+  max-height: 0;
+  transition: max-height 0.2s;
+  padding: 0 15px;
+  font-family: "Poppins", sans-serif;
+  background: #B6D8FF;
+  border-radius: 0 0 1rem 1rem;
+  color: #0F4D90;
+}
+.accordion__content h3 {
+  text-align: center;
+  font-family: "Rozha One", serif;
+  font-size: 2rem;
 }
 
 aside {
@@ -143,4 +165,42 @@ aside a img {
   box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.1);
 }
 
-/*# sourceMappingURL=inicio.css.map */
+.sintesis p:last-child {
+  margin-bottom: 5rem;
+}
+
+.cons-directivo {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 2rem;
+}
+.cons-directivo .cons-dirs {
+  grid-column-start: span 3;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+.cons-directivo .cons-dirs div {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex;
+  align-items: center;
+  max-width: 1/3;
+  margin: 1rem;
+  padding: 1rem;
+}
+.cons-directivo .cons-dirs div img {
+  width: 60%;
+  border-radius: 50%;
+  box-shadow: 0px 0px 6px 1px rgba(255, 255, 255, 0.4);
+  margin: 1rem;
+}
+.cons-directivo .cons-dirs div p, .cons-directivo .cons-dirs div h4 {
+  text-align: center;
+}
+
+.voc-titu h3, .voc-sup h3, .com-rev h3 {
+  font-size: 1.2rem;
+  margin-bottom: 15px;
+}
+
+/*# sourceMappingURL=nosotros.css.map */
