--- a/public/css/pages/afiliacion.css
+++ b/public/css/pages/afiliacion.css
@@ -119,14 +119,46 @@ form textarea {
   margin: 15px;
 }
 
+dialog {
+  position: relative;
+  width: 60vw;
+  margin: auto;
+  position: fixed;
+}
+dialog .box {
+  display: flex;
+  position: sticky;
+  top: 0;
+  padding: 0px;
+  width: 100%;
+  height: 75px;
+}
+dialog .box button {
+  background: none;
+  color: inherit;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+  border: none;
+  width: 50%;
+  font-size: 2rem;
+}
+dialog .box #imprimir {
+  background: #00a2ff;
+}
+dialog .box #volver {
+  background: #f8ff30;
+}
+
 #element-to-print {
-  max-width: 210mm;
+  width: auto;
+  height: auto;
 }
 
 .inscripcion {
-  max-height: 297mm;
+  min-height: 297mm;
   width: 180mm;
-  padding: 10mm 10mm 5mm 10mm;
+  padding: 5mm 10mm 5mm 10mm;
 }
 .inscripcion h1 {
   font-family: "Arial Narrow", Arial, sans-serif;
@@ -174,8 +206,12 @@ form textarea {
 .inscripcion .firma div p {
   margin: 0;
 }
+.inscripcion .firma p {
+  margin: 0 0 5mm;
+}
 .inscripcion hr {
   border-top: 2px dashed;
+  margin: 5mm;
 }
 .inscripcion .datos {
   display: flex;
