--- a/src/scss/pages/afiliacion.scss
+++ b/src/scss/pages/afiliacion.scss
@@ -36,15 +36,49 @@ form{
     
 }
 
+dialog{
+    position: relative;
+    width: 60vw;
+    margin: auto;
+    position: fixed;
+    .box{
+        display: flex;
+        position: sticky;
+        top: 0;
+        padding: 0px;
+        width: 100%;
+        height: 75px;
+        button{
+            background: none;
+            color: inherit;
+            font: inherit;
+            cursor: pointer;
+            outline: inherit;
+            border: none;
+            width: 50%;
+            font-size: 2rem;
+        }
+        #imprimir{
+            background: #00a2ff;
+        }
+        #volver{
+            background: #f8ff30;
+        } 
+    }
+}
+
+
 #element-to-print{
-    max-width: 210mm;
+    width: auto;
+    height: auto;
 }
 
 .inscripcion{
-    max-height: 297mm;
+    min-height: 297mm;
     width: 180mm;
     // border-style: solid;
-    padding: 10mm 10mm 5mm 10mm;
+    // border-width: 1px;
+    padding: 5mm 10mm 5mm 10mm;
     
 
     h1{
@@ -98,11 +132,15 @@ form{
                 margin: 0;
             }
         }
+        p{
+            margin: 0 0 5mm
+        }
         
     }
 
     hr{
         border-top: 2px dashed;
+        margin: 5mm;
     }
 
     .datos{
